// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > [DELETE] should generate with unknownType \`any\` 1`] = `
[
  {
    "baseName": "delete_pet-petid.ts",
    "env": undefined,
    "exports": [],
    "id": undefined,
    "imports": [],
    "meta": {
      "name": "delete_pet-petid",
      "pluginKey": undefined,
      "tag": undefined,
    },
    "override": undefined,
    "path": "delete_pet-petid.ts",
    "source": "export type DeletePetPetidMutationResponse = any | null;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
",
  },
]
`;

exports[`OperationGenerator > [DELETE] should generate with unknownType \`unknown\` 1`] = `
[
  {
    "baseName": "delete_pet-petid.ts",
    "env": undefined,
    "exports": [],
    "id": undefined,
    "imports": [],
    "meta": {
      "name": "delete_pet-petid",
      "pluginKey": undefined,
      "tag": undefined,
    },
    "override": undefined,
    "path": "delete_pet-petid.ts",
    "source": "export type DeletePetPetidMutationResponse = unknown | null;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
",
  },
]
`;

exports[`OperationGenerator > [GET] should generate with optionalType \`questionToken\` 1`] = `
[
  {
    "baseName": "listPets.ts",
    "env": undefined,
    "exports": [],
    "id": undefined,
    "imports": [
      {
        "isTypeOnly": true,
        "name": [
          "Error",
        ],
        "path": "Error",
        "root": "listPets.ts",
      },
      {
        "isTypeOnly": true,
        "name": [
          "Pets",
        ],
        "path": "Pets",
        "root": "listPets.ts",
      },
    ],
    "meta": {
      "name": "listPets",
      "pluginKey": undefined,
      "tag": "pets",
    },
    "override": undefined,
    "path": "listPets.ts",
    "source": "export type ListPetsQueryParams = {
    /**
     * @description How many items to return at one time (max 100)
     * @type string | undefined
    */
    limit?: string;
} | undefined;

 /**
 * @description unexpected error
*/
export type ListPetsError = Error;

 /**
 * @description A paged array of pets
*/
export type ListPetsQueryResponse = Pets;
export type ListPetsQuery = {
    Response: ListPetsQueryResponse;
    QueryParams: ListPetsQueryParams;
    Errors: ListPetsError;
};
",
  },
]
`;

exports[`OperationGenerator > [GET] should generate with optionalType \`questionToken\` 2`] = `
[
  {
    "baseName": "showPetById.ts",
    "env": undefined,
    "exports": [],
    "id": undefined,
    "imports": [
      {
        "isTypeOnly": true,
        "name": [
          "Error",
        ],
        "path": "Error",
        "root": "showPetById.ts",
      },
      {
        "isTypeOnly": true,
        "name": [
          "Pet",
        ],
        "path": "Pet",
        "root": "showPetById.ts",
      },
    ],
    "meta": {
      "name": "showPetById",
      "pluginKey": undefined,
      "tag": "pets",
    },
    "override": undefined,
    "path": "showPetById.ts",
    "source": "export type ShowPetByIdPathParams = {
    /**
     * @description The id of the pet to retrieve
     * @type string
    */
    petId: string;
    /**
     * @description The id of the pet to retrieve
     * @type string
    */
    testId: string;
};

 /**
 * @description unexpected error
*/
export type ShowPetByIdError = Error;

 /**
 * @description Expected response to a valid request
*/
export type ShowPetByIdQueryResponse = Pet;
export type ShowPetByIdQuery = {
    Response: ShowPetByIdQueryResponse;
    PathParams: ShowPetByIdPathParams;
    Errors: ShowPetByIdError;
};
",
  },
]
`;

exports[`OperationGenerator > [POST] should generate 1`] = `
[
  {
    "baseName": "createPets.ts",
    "env": undefined,
    "exports": [],
    "id": undefined,
    "imports": [
      {
        "isTypeOnly": true,
        "name": [
          "Error",
        ],
        "path": "Error",
        "root": "createPets.ts",
      },
    ],
    "meta": {
      "name": "createPets",
      "pluginKey": undefined,
      "tag": "pets",
    },
    "override": undefined,
    "path": "createPets.ts",
    "source": "/**
 * @description Null response
*/
export type CreatePets201 = any | null;

 export type CreatePetsMutationRequest = {
    /**
     * @type string
    */
    name: string;
    /**
     * @type string
    */
    tag: string;
};

 export type CreatePetsMutationResponse = any | null;

 /**
 * @description unexpected error
*/
export type CreatePetsError = Error;
export type CreatePetsMutation = {
    Response: CreatePetsMutationResponse;
    Request: CreatePetsMutationRequest;
    Errors: CreatePets201 | CreatePetsError;
};
",
  },
]
`;
